# HIF

./: CMakeLists.txt  README.md
cmake/: config.h.cmake
cmake/toolchains/: BigMem0.cmake  Edison-gnu-mpich-libsci.cmake  ICME-GPU-gnu-mpich.cmake  ICME-Share-gnu-openmpi.cmake  Sherlock-gnu-mpich.cmake  Stampede-gnu-mvapich2-mkl.cmake  Stampede-intel-mvapich2.cmake
demo/: HIFResult.py  demo_main.py
include/: HIF.h  HIF.hpp
include/HIF/: HIFGraph.h  graphpartition.h  graphpartition.hpp  hifgraph.hpp  setoperation.h  setoperation.hpp  tools.h  tools.hpp
include/HIF/core/: environment.h  environment.hpp
include/HIF/core/environment/: decl.h  decl.hpp  impl.hpp
include/core/: Matrix.hpp  Tensor.hpp  types.hpp
include/core/Matrix/: decl.hpp  impl.hpp
include/core/Tensor/: decl.hpp  impl.hpp
sbatch/HIFGMRES2_sbatch/: HIFGMRES2_grid2d5_sbatch.sh  HIFGMRES2_grid2d9_sbatch.sh  HIFGMRES2_grid2dt_sbatch.sh  HIFGMRES2_grid3d19_sbatch.sh  HIFGMRES2_grid3d7_sbatch.sh  HIFGMRES2_grid3d7minus_sbatch.sh  HIFGMRES2_grid3d7plus_sbatch.sh  HIFGMRES2_grid3d7quasi_sbatch.sh
sbatch/HIFSolve2_sbatch/: HIFSolve2_grid2d5_sbatch.sh  HIFSolve2_grid2d9_sbatch.sh  HIFSolve2_grid2dt_sbatch.sh  HIFSolve2_grid3d19_sbatch.sh  HIFSolve2_grid3d7_sbatch.sh  HIFSolve2_grid3d7minus_sbatch.sh  HIFSolve2_grid3d7plus_sbatch.sh  HIFSolve2_grid3d7quasi_sbatch.sh
sbatch/MFSolve2_sbatch/: MFSolve2_grid2d5_sbatch.sh  MFSolve2_grid2d9_sbatch.sh  MFSolve2_grid2dt_sbatch.sh  MFSolve2_grid3d19_sbatch.sh  MFSolve2_grid3d7_sbatch.sh  MFSolve2_grid3d7minus_sbatch.sh  MFSolve2_grid3d7plus_sbatch.sh  MFSolve2_grid3d7quasi_sbatch.sh
src/: Environment.cpp  Tools.cpp
src/GraphPartition/: GraphPart.cpp  GraphPart.hpp
src/HIFGraph/: Apply.h  Apply.hpp  ApplyMerge.h  ApplyMerge.hpp  ApplySkelDown.h  ApplySkelDown.hpp  ApplySkelUp.h  ApplySkelUp.hpp  ApplySparseElimDown.h  ApplySparseElimDown.hpp  ApplySparseElimUp.h  ApplySparseElimUp.hpp  ApplySplit.h  ApplySplit.hpp  BuildTree.h  BuildTree.hpp  DebugTools.h  DebugTools.hpp  Factorization.h  Factorization.hpp  FillTree.h  FillTree.hpp  FillVecTree.h  FillVecTree.hpp  GetSolution.h  GetSolution.hpp  HIFGraph.cpp  Merge.h  Merge.hpp  RootApply.h  RootApply.hpp  RootFacorization.h  RootFacorization.hpp  SetNeighborNode.h  SetNeighborNode.hpp  SetSeparatorType.h  SetSeparatorType.hpp  Skel.h  Skel.hpp  SparseElim.h  (+2 more)
src/SetOperation/: AddElement.h  AddElement.hpp  Diff.h  Diff.hpp  Find.h  Find.hpp  Intersect.h  Intersect.hpp  Unique.h  Unique.hpp  setop.cpp
test/: Factorization.cpp
test/HIFGMRES/: HIFGMRES.cpp  testHIFGMRES.cpp  testHIFGMRES2.cpp
test/HIFGraph/: Factorization.cpp  HIFSolve.cpp  testHIFSolve.cpp  testHIFsolve.cpp
test/HIFSolve/: HIFSolve.cpp  testHIFSolve.cpp  testHIFSolve2.cpp  testHIFSolveworst_grid3d7.cpp
